grammar.txt
=============================================================
== Grammar 0.10

expression :: equality 
equality   :: comparison ( ( "!=" | "==" ) comparison )* 
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | "(" expression ")" 
=============================================================

=============================================================
== Grammar 0.11

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                <---
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 
=============================================================

=============================================================
== Grammar 0.20

program         :: statement*                               <---
statement       :: expression_stmt | print_stmt             <---
expression_stmt :: expression ";"                           <---
print_stmt      :: "print" expression ";"                   <---

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 
=============================================================

=============================================================
== Grammar 0.21

program         :: declaration*                                     
declaration     :: var_declaration | statement

var_declaration :: IDENTIFIER ":" IDENTIFIER (= expression)? ";"   <---                            
statement       :: expression_stmt | print_stmt             
expression_stmt :: expression ";"                          
print_stmt      :: "print" expression ";"                   

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 
=============================================================

=============================================================
== Grammar 0.22

program         :: declaration*                                     
declaration     :: var_declaration | var_declaration_auto | statement   <--- 

var_declaration      :: IDENTIFIER ":"  IDENTIFIER (= expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";";   

statement            :: expression_stmt | print_stmt             
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"                   

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 
=============================================================

=============================================================
== Grammar 0.23

program         :: declaration*                                     
declaration     :: var_declaration | var_declaration_auto | statement    

var_declaration      :: IDENTIFIER ":"  IDENTIFIER ("=" expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";";   

statement            :: expression_stmt | print_stmt | block            <---    
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"  
block                :: "{" declaration* "}"                 

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 
=============================================================

=============================================================
== Grammar 0.30

program         :: declaration*                                     
declaration     :: if_condition | var_declaration | var_declaration_auto | statement   <---    

if_condition    :: "if"      expression block (else_if (else)?)?                       <---    
else_if         :: "else if" expression block                                          <---    
else            :: "else"    block                                                     <---    

var_declaration      :: IDENTIFIER ":"  IDENTIFIER ("=" expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";";   

statement            :: expression_stmt | print_stmt | block                
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"  
block                :: "{" declaration* "}"                 

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 
=============================================================

=============================================================
== Grammar 0.31

program         :: declaration*                                     
declaration     :: if_condition | var_declaration | var_declaration_auto | statement      

if_condition    :: "if"      expression block (else_if (else)?)?                           
else_if         :: "else if" expression block                                             
else            :: "else"    block                                                        

var_declaration      :: IDENTIFIER ":"  IDENTIFIER ("=" expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";";   

statement            :: expression_stmt | print_stmt | block                
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"  
block                :: "{" declaration* "}"                 

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 

line_comments  --> '//'                                         <--- 
block_comments --> '/* */'                                      <--- 
=============================================================

=============================================================
== Grammar 0.40

program         :: declaration*                                     
declaration     :: for_loop | if_condition | var_declaration | var_declaration_auto | statement   <---  

for_loop        :: "for" IDENTIFIER "in" for_loop_range block               <--- 
for_loop_range  :: INTEGER ".." INTEGER (".." INTEGER)?                     <--- 

if_condition    :: "if"      expression block (else_if (else)?)?                           
else_if         :: "else if" expression block                                             
else            :: "else"    block                                                        

var_declaration      :: IDENTIFIER ":"  IDENTIFIER ("=" expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";";   

statement            :: expression_stmt | print_stmt | block                
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"  
block                :: "{" declaration* "}"                 

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 

line_comments  --> '//'                                         
block_comments --> '/* */'                                      
=============================================================

=============================================================
== Grammar 0.41

program         :: declaration*                                     
declaration     :: while_loop | for_loop | if_condition | var_declaration | var_declaration_auto | statement   <---  

while_loop      :: "while" expression block                                     <---  

for_loop        :: "for" IDENTIFIER "in" for_loop_range block               
for_loop_range  :: INTEGER ".." INTEGER (".." INTEGER)?                     

if_condition    :: "if"      expression block (else_if (else)?)?                           
else_if         :: "else if" expression block                                             
else            :: "else"    block                                                        

var_declaration      :: IDENTIFIER ":"  IDENTIFIER ("=" expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";";   

statement            :: expression_stmt | print_stmt | block                
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"  
block                :: "{" declaration* "}"                 

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 

line_comments  --> '//'                                         
block_comments --> '/* */'                                      
=============================================================

=============================================================
== Grammar 0.42

program         :: declaration*                                     
declaration     :: while_loop | for_loop | if_condition | 
                   var_declaration | var_declaration_auto | var_assignment | statement   <---  

while_loop      :: "while" expression block                                     

for_loop        :: "for" IDENTIFIER "in" for_loop_range block               
for_loop_range  :: INTEGER ".." INTEGER (".." INTEGER)?                     

if_condition    :: "if"      expression block (else_if (else)?)?                           
else_if         :: "else if" expression block                                             
else            :: "else"    block                                                        

var_declaration      :: IDENTIFIER ":"  IDENTIFIER ("=" expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";"   
var_assignment       :: IDENTIFIER "=" expression ";"                          <---  

statement            :: expression_stmt | print_stmt | block                
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"  
block                :: "{" declaration* "}"                 

expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" 

line_comments  --> '//'                                         
block_comments --> '/* */'                                      
=============================================================

=============================================================
== Grammar 0.50

program          :: declaration*                                     
declaration      :: func_declaration | 
                    while_loop | for_loop | if_condition | 
                    var_declaration | var_declaration_auto | var_assignment | statement   

func_declaration :: IDENTIFIER "::" "(" (IDENTIFIER ":"  IDENTIFIER ",")* ")" block 

while_loop       :: "while" expression block                                     

for_loop         :: "for" IDENTIFIER "in" for_loop_range block               
for_loop_range   :: INTEGER ".." INTEGER (".." INTEGER)?                     

if_condition     :: "if"      expression block (else_if (else)?)?                           
else_if          :: "else if" expression block                                             
else             :: "else"    block                                                        

var_declaration      :: IDENTIFIER ":"  IDENTIFIER ("=" expression)? ";"        
var_declaration_auto :: IDENTIFIER ":=" expression ";"   
var_assignment       :: IDENTIFIER "=" expression ";"                         

statement            :: expression_stmt | print_stmt | block  
expression_stmt      :: expression ";"                          
print_stmt           :: "print" expression ";"  
block                :: "{" declaration* "}"              


expression :: equality 
equality   :: and_or ( ( "!=" | "==" ) and_or )*                
and_or     :: comparison ( ( "and" | "or" )  comparison )*  
comparison :: term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term       :: factor ( ( "-" | "+" ) factor )* 
factor     :: unary ( ( "/" | "*" ) unary )* 
unary      :: ( "!" | "-" ) unary
              | primary 
primary    :: INTEGER | BOOLEAN | "(" expression ")" | function_call                    <---

function_call :: IDENTIFIER "(" (expression ",")* ")"                                   <---

line_comments  --> '//'                                         
block_comments --> '/* */'                                      
=============================================================
